tests/ui/linkage-attr/raw-dylib/windows/import-name-type-unsupported-link-kind.stderr
error: import name type can only be used with link kind `raw-dylib`
  --> $DIR/import-name-type-unsupported-link-kind.rs:8:22
   |
LL | #[link(name = "foo", import_name_type = "decorated")]
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: import name type can only be used with link kind `raw-dylib`
  --> $DIR/import-name-type-unsupported-link-kind.rs:12:39
   |
LL | #[link(name = "bar", kind = "static", import_name_type = "decorated")]
   |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

